--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#004e98",
-  "orientation": "portrait",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "orientation": "portrait"
 }
